fix: Fixing build on Java 25. (#329)
Tests are failing on Java 25 because of a classloading issue if uwing
vertx json codec instead of Jackson object mapper.

Signed-off-by: Emmanuel Hugonnet <ehugonne@redhat.com>